Fixed routing to Dashboard, added Sidebar

--- a/app/views/core.layout.html
+++ b/app/views/core.layout.html
@@ -1,14 +1,17 @@
 <!-- navbar -->
-<header ng-include="" class="header-container"></header>
+<header ng-include="'app/views/header.html'" class="header-container"></header>
 <!-- sidebar -->
 <aside></aside>
 <div></div>
 <!-- main area -->
 <main>
     <!-- page content -->
-    <section ui-view ng-class="app.viewAnimation"></section>
+    <span>Start Page Content</span>
+    <section ui-view="" ng-class="app.viewAnimation"></section>
+    <span>End Page Content</span>
+    <a ui-sref="app.dashboard" >Go to Dashboard</a>
     <!-- page footer -->
     <footer>
-        <span>Anchorage</span>
+        <span>Anchorage Footer</span>
     </footer>
 </main>
