--- a/app/css/centric.css
+++ b/app/css/centric.css
@@ -8,9 +8,9 @@
  * Author: @themicon_co
  * Website: http://themicon.co
  * License: https://wrapbootstrap.com/help/licenses
- *
+ * @import url("//fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700");
  */
-@import url("//fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700");
+
 
 /**
  * Bootstrap Reset
